[workspace]
members = [
	"./rust_start_project",
	"./rust_use_package",
	"./rust_multi_file",
	"./rust_multi_pack_file/my_library",
	"./rust_multi_pack_file/my_app",
	"./rust_global_local_scope",
	"./rust_atomic_global_local_scope",
	"./rust_struct_methods",
	"./rust_public_private",
	"./rust_inherit_class/trait_example",
	"./rust_inherit_class/composition_example",
	"./rust_poly_class",
	"./rust_class_property",
	"./rust_error_handling",
	"./rust_string_format",
	"./rust_generics_example",
	"./rust_lambda_example",
	"./rust_linq_example",
	"./rust_linked_list",
	"./rust_ring_buffer",
	"./rust_data_queue",
	"./rust_data_stack",
	"./rust_binary_tree",
	"./rust_balanced_tree",
	"./rust_hash_table",
	"./rust_quick_sort",
	"./rust_non_recursive_shell_sort",
	"./rust_list_package",
	"./rust_queue_package",
	"./rust_ring_package",
	"./rust_stack_package",
	"./rust_balanced_tree_package",
	"./rust_hash_table_package",
	"./rust_sort_package",
	"./rust_threading_example",
	"./rust_async_await_example",
	"./rust_mutex_example",
	"./rust_message_box_example",
	"./rust_memory/memory_box",
	"./rust_memory/memory_rc",
	"./rust_memory/memory_ref_cell",
	"./rust_memory/memory_rc_ref_cell",
	"./rust_memory/memory_weak",
	"./rust_memory/memory_arc",
	"./rust_memory/memory_arc_mutex",
]
